# cardano-lottery

./: LICENSE  Lottery.hs  NOTICE  README.md  SECURITY.md  STYLE.md  TestLottery.hs  cabal.project  cardano-lottery-pab.yaml  cardano-lottery.cabal  pab-core.db  testing notes.md
app/: Bench-simulator.hs  BenchContract.hs  LottoContract.hs  Main-run.hs  Main-sim.hs  Main-simulator.hs  Main.hs  activate-contract.sh  activate-use-contract.sh  activation-init.json  activation-use.json  activation.json  create wallets.sh  init-contract.sh  init.json  start.json  transfer funds.sh  use-contracts.sh
deploy/: buy-token-name.json  buy-token-value.json  buy-val-addr.json  buy-validator.hash  buy-validator.plutus  jackpot-split.json  lotto-datum-init.datum  lotto-token-name.json  lotto-token-value.json  lotto-val-addr.json  lotto-validator.hash  lotto-validator.plutus  redeemer-lotto-draw.json  redeemer-thread-token-mint.json  redeemer-ticket-mint.json  ticket-policy.hash  ticket-policy.plutus
scripts/: Main-scripts.hs  Main.hs  create-wallets-devnet.sh  protocol-parameters.json  run-devnet-test.sh  run-testnet-test.sh
scripts/cardano-cli/: buy-lotto-tx.sh  calc-lotto-tx.sh  close-lotto-tx.sh  collect-lotto-tx.sh  draw-lotto-tx.sh  end-lotto-tx.sh  init-lotto-tx.sh  open-lotto-tx.sh  payout-lotto-tx.sh  redeem-lotto-tx.sh  startbuy-lotto-tx.sh  stopbuy-lotto-tx.sh  transfertoken-lotto-tx.sh
scripts/cardano-cli/devnet/: buy-lotto-tx.sh  collect-lotto-tx.sh  end-lotto-tx.sh  global-export-variables.sh  payout-lotto-tx.sh  redeem-lotto-tx.sh  run-devnet-test.sh  transfertoken-lotto-tx.sh
scripts/cardano-cli/devnet/data/: buy-datum-startbuy.datum  buy-token-name.json  buy-token-value.json  buy-val-addr.json  buy-validator.hash  buy-validator.plutus  lotto-datum-init.datum  lotto-thread-token-policy.plutus  lotto-token-name.json  lotto-token-value.json  lotto-val-addr.json  lotto-validator.hash  lotto-validator.plutus  redeemer-lotto-collect.json  redeemer-lotto-draw.json  redeemer-lotto-end.json  redeemer-lotto-redeem.json  redeemer-thread-token-mint.json  redeemer-ticket-burn.json  ticket-policy.hash  ticket-policy.plutus
scripts/cardano-cli/mainnet/: draw-lotto-tx.sh  global-export-variables.sh  init-lotto-tx.sh  open-lotto-tx.sh  run-mainnet.sh  startbuy-lotto-tx.sh  stopbuy-lotto-tx.sh
scripts/cardano-cli/testnet/: blockfrost.id  calc-lotto-tx.sh  close-lotto-tx.sh  global-export-variables.sh  run-testnet.sh
scripts/cardano-cli/testnet/data/: buy-token-name.json  buy-token-value.json  buy-val-addr.json  buy-validator.hash  buy-validator.plutus  lotto-datum-init.datum  lotto-thread-token-policy.hash  lotto-token-name.json  lotto-token-value.json  lotto-val-addr.json  lotto-validator.hash  lotto-validator.plutus  redeemer-lotto-calc.json  redeemer-lotto-close.json  redeemer-lotto-draw.json  redeemer-lotto-payout.json  redeemer-lotto-startbuy.json  redeemer-lotto-stopbuy.json  redeemer-thread-token-mint.json  ticket-policy.hash  ticket-policy.plutus
src/: Benchmark.hs  Deploy.hs  Dev Notes:.txt  Lottery.hs  OffChain.hs  OnChain.hs  TestBenchmark.hs  TestLottery.hs  Types.hs  Utils.hs
tmp/: cardano-lottery-test-1-unapplied.flat  cardano-lottery-test-1.flat  cardano-lottery-test-10.flat  cardano-lottery-test-11.flat  cardano-lottery-test-12.flat  cardano-lottery-test-2.flat  cardano-lottery-test-3.flat  cardano-lottery-test-4.flat  cardano-lottery-test-5.flat  cardano-lottery-test-6-unapplied.flat  cardano-lottery-test-6.flat  cardano-lottery-test-7.flat  cardano-lottery-test-8-unapplied.flat  cardano-lottery-test-8.flat  cardano-lottery-test-9.flat
