cabal-version:      2.4
name:               cardano-lottery
version:            0.2.1.0

-- A short (one-line) description of the package.
-- synopsis: A lottery build using plutus for the cardano blockchain

-- A longer description of the package.
-- description:A lottery build using plutus for the cardano blockchain
-- using a state machine design pattern with configurable lottery parameters

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author: Lawrence Ley
maintainer: lawrence.ley@contextsolutions.ca

-- A copyright notice.
-- copyright: @ 2022 Lawrence Ley
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Lottery 
      TestLottery
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      openapi3,
      text,
      lens,
      data-default,
 
    hs-source-dirs: src

executable cardano-lottery-pab-sim
  import: lang
  main-is: Main-simulator.hs
  hs-source-dirs: app
  other-modules: LottoContract
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    aeson -any,
    cardano-lottery -any,
    data-default -any,
    freer-simple -any,
    freer-extras -any,
    openapi3 -any,
    plutus-contract -any,
    plutus-ledger-api -any,
    plutus-pab -any,
    prettyprinter -any,
    plutus-ledger -any,
    req ^>= 3.9.0,
    text -any
 
 
executable cardano-lottery-pab-run
  import: lang
  main-is: Main-run.hs
  hs-source-dirs: app
  other-modules: LottoContract
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    aeson -any,
    cardano-lottery -any,
    data-default -any,
    freer-simple -any,
    freer-extras -any,
    openapi3 -any,
    plutus-contract -any,
    plutus-ledger-api -any,
    plutus-pab -any,
    prettyprinter -any,
    plutus-ledger -any,
    req ^>= 3.9.0,
    text -any 
 

executable cardano-lottery-scripts
    main-is: Main.hs
    hs-source-dirs:
        scripts
        test
    default-language: Haskell2010
    other-modules:
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -rtsopts
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        base >= 4.9 && <5,
        aeson -any,
        bytestring -any,
        cardano-crypto-class -any,
        containers -any,
        data-default -any,
        flat -any,
        freer-extras -any,
        hedgehog -any,
        prettyprinter -any,
        QuickCheck -any,
        tasty -any,
        tasty-hunit -any,
        tasty-golden -any,
        tasty-quickcheck -any,
        text -any,
        lens -any,
        mtl -any,
        row-types -any,
        freer-simple -any,
        foldl -any,
        streaming -any,
        directory -any,
        filepath -any,
        serialise -any,
        plutus-core -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        plutus-contract -any,
        plutus-chain-index -any,
        plutus-ledger -any,
        optparse-applicative -any,
        aeson-pretty -any,
        cardano-api -any,
        cardano-binary -any,
        cardano-lottery -any,
        cborg -any,
        memory -any

    if !(impl(ghcjs) || os(ghcjs))
        build-depends: plutus-tx-plugin -any
